--- a/src/app.css
+++ b/src/app.css
@@ -12,19 +12,19 @@ html {
 }
 
 .b:disabled {
-    @apply opacity-80;
+    @apply opacity-75;
 }
 
 .b-menu {
-    @apply w-full b p-2 py-1 transition bg-black dark:bg-white bg-opacity-0 hover:bg-opacity-10 dark:bg-opacity-0 dark:hover:bg-opacity-10 cursor-pointer px-2 dark:text-zinc-200 text-zinc-700 border-gray-300 dark:border-zinc-700;
+    @apply w-full b p-2 py-1 transition bg-black dark:bg-white bg-opacity-0 hover:bg-opacity-10 dark:bg-opacity-0 dark:hover:bg-opacity-10 px-2 dark:text-zinc-200 text-zinc-700 border-gray-300 dark:border-zinc-700;
 }
 
 .b-blue {
-    @apply text-white dark:text-white bg-blue-600 hover:bg-opacity-90 disabled:bg-opacity-80 border-none  transition-colors px-2 py-1 rounded-md font-medium border-gray-300 dark:border-zinc-700;
+    @apply text-white dark:text-white bg-[linear-gradient(110deg,#2563eb,45%,#3b82f6,55%,#2563eb)] bg-[length:200%_100%] border-blue-600 hover:opacity-90 disabled:opacity-80 border-[1px] transition px-2 py-1 rounded-md font-medium animate-background-shine;
 }
 
 .b-green {
-    @apply text-white dark:text-white bg-green-600 hover:bg-opacity-90 disabled:bg-opacity-80 border-none  transition-colors px-2 py-1 rounded-md font-medium border-gray-300 dark:border-zinc-700;
+    @apply text-white dark:text-white bg-[linear-gradient(110deg,#16a34a,45%,#22c55e,55%,#16a34a)] bg-[length:200%_100%] border-green-600 hover:opacity-90 disabled:opacity-80 border-[1px] transition px-2 py-1 rounded-md font-medium animate-background-shine;
 }
 
 .b-clear {
